plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
    id("com.diffplug.spotless") version "6.25.0"
    id 'jacoco'
}

group = 'rocks.inspectit.gepard'
version = '0.0.1-SNAPSHOT'
def configVersion = '3.0.3-dev'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        name = "inspectit-gepard-config"
        url = uri("https://maven.pkg.github.com/inspectIT/inspectit-gepard-config")
        credentials {
            username = project.findProperty("gpr.inspectit.gepard.user") ?: System.getenv("GITHUB_ACTOR")
            password = project.findProperty("gpr.inspectit.gepard.token") ?: System.getenv("GITHUB_TOKEN")
        }
    }
}

dependencies {
    // Agent configuration model
    implementation("rocks.inspectit.gepard:inspectit-gepard-config:${configVersion}")

    // Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    annotationProcessor 'org.projectlombok:lombok'

    // JGit for accessing configurations in Git repositories
    implementation 'org.eclipse.jgit:org.eclipse.jgit:7.0.0.202409031743-r'
    // Actuator - for management endpoints
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // Swagger - for API documentation
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    runtimeOnly project(':frontend')
}

tasks.named('test') {
    finalizedBy jacocoTestReport
    useJUnitPlatform()
}

jacocoTestReport {
    dependsOn test
}

spotless {
    java {
        importOrder()
        removeUnusedImports()

        // Cleanthat will refactor code. Has to be configured.
        // cleanthat()

        googleJavaFormat()   // has its own section below

        formatAnnotations()  // fixes formatting of type annotations, see below

        licenseHeader '/* (C) 2024 */' // or licenseHeaderFile
    }
}

